updated "Display Format" of progress bars for Forms and project Tasks dialog to include % symbol Files modified - [ViewProject.html,Forms.html]

--- a/src/main/webapp/pages/Forms/Forms.html
+++ b/src/main/webapp/pages/Forms/Forms.html
@@ -53,7 +53,7 @@
                                 <wm-gridrow name="gridrow15">
                                     <wm-gridcolumn columnwidth="2" name="gridcolumn29"></wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="8" name="gridcolumn26" horizontalalign="center">
-                                        <wm-progress name="progressStatus" datavalue="bind:currentProgress" type="success" captionplacement="inside"></wm-progress>
+                                        <wm-progress name="progressStatus" datavalue="bind:currentProgress" type="success" captionplacement="inside" displayformat="9%"></wm-progress>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="2" name="gridcolumn30"></wm-gridcolumn>
                                 </wm-gridrow>
