--- a/src/main/webapp/pages/ViewProject/ViewProject.html
+++ b/src/main/webapp/pages/ViewProject/ViewProject.html
@@ -641,7 +641,7 @@
                 </wm-gridrow>
                 <wm-gridrow name="gridrow65_1" padding="unset unset 1em unset">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn109_1" horizontalalign="center">
-                        <wm-progress name="progressCompleted" datavalue="bind:Widgets.textPercentageCompleted.datavalue" captionplacement="inside"></wm-progress>
+                        <wm-progress name="progressCompleted" datavalue="bind:Widgets.textPercentageCompleted.datavalue" captionplacement="inside" displayformat="9%"></wm-progress>
                     </wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow58" padding="1em unset">
@@ -804,6 +804,7 @@
                     </wm-gridcolumn>
                     <wm-gridcolumn columnwidth="3" name="gridcolumn30"></wm-gridcolumn>
                 </wm-gridrow>
+                <wm-gridrow name="gridrow15_1"></wm-gridrow>
             </wm-layoutgrid>
             <wm-dialogactions name="dialogactions6">
                 <wm-button class="btn-secondary" caption="Close" on-click="closeDialog()" name="button14" iconclass="wi wi-cancel"></wm-button>
