Update ForceInspectionSequence For Form New files added - [UpdateForceInspectionSequenceForFormRequest.java] Files modified - [UpdateVendorStatusRequest.java,InsertSubscriptionRequest.java,QueryExecutionController.java,UpdateUserPreferencesRequest.java,AddGistoFormsRequest.java,UpdateInfoFromMyProfileRequest.java,InsertNewRoleRequest.java,Cx2QueryExecutorServiceImpl.java,AddMemeberToProjectRequest.java,InsertTagForMessageRequest.java,UpdateProjectDescriptionRequest.java,MapAsAdminForVendorRequest.java,RemoveVendorFromMasterFormsRequest.java,InsertFormMessageRequest.java,InsertGroupsRequest.java,RecordFormHistoryRequest.java,cx2_query.json,InsertFormsIntoProjectRequest.java,UpdatePrimaryVendorStatusInVendor2formsRequest.java,SetModifiedDateForProjectRequest.java,cx2-queries.hbm.xml,UpdateFormStatusInMasterFormsRequest.java,EditForm.variables.json,InsertProjectMessageRequest.java,UpdateRoleForMunicipalityRequest.java,ResetPasswordForUserRequest.java,UpdateNewPasswordRequest.java,UpdateMunicipalityInfoRequest.java,EditForm.html,UpdateProcessOwnersForGuidRequest.java,Cx2QueryExecutorService.java]

--- a/src/main/webapp/pages/EditForm/EditForm.html
+++ b/src/main/webapp/pages/EditForm/EditForm.html
@@ -542,7 +542,8 @@
                                                     <wm-gridrow name="gridrow66" padding="1em unset">
                                                         <wm-gridcolumn columnwidth="4" name="gridcolumn103_2"></wm-gridcolumn>
                                                         <wm-gridcolumn columnwidth="4" name="gridcolumn96" horizontalalign="center">
-                                                            <wm-checkbox caption="Force Inspection Sequence" class="col-md-push-3 col-md-9" name="checkboxForceInspectionSequenc" checkedvalue="true" uncheckedvalue="false" datavalue="bind:Variables.CurrentFormObj.firstRecord.forceInspectionSequence"></wm-checkbox>
+                                                            <wm-checkbox caption="Force Inspection Sequence" class="col-md-push-3 col-md-9" name="checkboxForceInspectionSequenc" checkedvalue="true" uncheckedvalue="false" datavalue="bind:Variables.CurrentFormObj.firstRecord.forceInspectionSequence"
+                                                            on-change="Variables.UpdateForceInspectionSequenceForForm.invoke()"></wm-checkbox>
                                                         </wm-gridcolumn>
                                                         <wm-gridcolumn columnwidth="4" name="gridcolumn102_2"></wm-gridcolumn>
                                                     </wm-gridrow>
